feat(about/i18n): add missing data-i18n keys for lists, metrics, industry recognition; fill en/zh translations; ensure English switch covers all sections

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -350,10 +350,10 @@
                             <h3 data-i18n="aboutPartnerAcademy">🔬 学术合作</h3>
                             <p data-i18n="aboutPartnerAcademyDesc">与国内外知名高校和研究机构建立合作关系，共同推进AI技术在内容创作领域的研究与应用。</p>
                             <ul>
-                                <li>联合实验室项目</li>
-                                <li>学术论文发表</li>
-                                <li>技术交流会议</li>
-                                <li>人才培养计划</li>
+                                <li data-i18n="aboutPartnerAcademyItem1">联合实验室项目</li>
+                                <li data-i18n="aboutPartnerAcademyItem2">学术论文发表</li>
+                                <li data-i18n="aboutPartnerAcademyItem3">技术交流会议</li>
+                                <li data-i18n="aboutPartnerAcademyItem4">人才培养计划</li>
                             </ul>
                         </div>
                         
@@ -361,10 +361,10 @@
                             <h3 data-i18n="aboutPartnerIndustry">💼 产业生态</h3>
                             <p data-i18n="aboutPartnerIndustryDesc">与AI芯片厂商、云服务提供商、内容平台等建立生态合作，构建完整的AI内容创作产业链。</p>
                             <ul>
-                                <li>硬件优化合作</li>
-                                <li>云服务集成</li>
-                                <li>平台内容分发</li>
-                                <li>标准制定参与</li>
+                                <li data-i18n="aboutPartnerIndustryItem1">硬件优化合作</li>
+                                <li data-i18n="aboutPartnerIndustryItem2">云服务集成</li>
+                                <li data-i18n="aboutPartnerIndustryItem3">平台内容分发</li>
+                                <li data-i18n="aboutPartnerIndustryItem4">标准制定参与</li>
                             </ul>
                         </div>
                         
@@ -372,10 +372,10 @@
                             <h3 data-i18n="aboutPartnerOpen">🌐 开源贡献</h3>
                             <p data-i18n="aboutPartnerOpenDesc">积极参与开源社区建设，贡献核心技术组件，推动AI技术的开放发展。</p>
                             <ul>
-                                <li>开源工具发布</li>
-                                <li>技术文档分享</li>
-                                <li>社区维护支持</li>
-                                <li>开发者培训</li>
+                                <li data-i18n="aboutPartnerOpenItem1">开源工具发布</li>
+                                <li data-i18n="aboutPartnerOpenItem2">技术文档分享</li>
+                                <li data-i18n="aboutPartnerOpenItem3">社区维护支持</li>
+                                <li data-i18n="aboutPartnerOpenItem4">开发者培训</li>
                             </ul>
                         </div>
                     </div>
@@ -391,19 +391,19 @@
                         <div class="data-items">
                             <div class="data-item">
                                 <div class="data-value">1,200,000+</div>
-                                <div class="data-desc">累计生成图像数量</div>
+                                <div class="data-desc" data-i18n="aboutDataImages">累计生成图像数量</div>
                             </div>
                             <div class="data-item">
                                 <div class="data-value">800,000+</div>
-                                <div class="data-desc">语音合成时长（小时）</div>
+                                <div class="data-desc" data-i18n="aboutDataAudioHours">语音合成时长（小时）</div>
                             </div>
                             <div class="data-item">
                                 <div class="data-value">150,000+</div>
-                                <div class="data-desc">注册用户数量</div>
+                                <div class="data-desc" data-i18n="aboutDataUsers">注册用户数量</div>
                             </div>
                             <div class="data-item">
                                 <div class="data-value">50+</div>
-                                <div class="data-desc">国家和地区覆盖</div>
+                                <div class="data-desc" data-i18n="aboutDataRegions">国家和地区覆盖</div>
                             </div>
                         </div>
                     </div>
@@ -412,16 +412,16 @@
                         <h3 data-i18n="aboutAchievementsTech">🎖️ 技术成就</h3>
                         <div class="tech-achievements">
                             <div class="tech-item">
-                                <h4>性能优化</h4>
-                                <p>平均图像生成时间缩短至15秒，语音合成实现实时处理</p>
+                                <h4 data-i18n="aboutTechPerf">性能优化</h4>
+                                <p data-i18n="aboutTechPerfDesc">平均图像生成时间缩短至15秒，语音合成实现实时处理</p>
                             </div>
                             <div class="tech-item">
-                                <h4>质量提升</h4>
-                                <p>用户满意度达到95%+，生成内容质量评分持续改善</p>
+                                <h4 data-i18n="aboutTechQuality">质量提升</h4>
+                                <p data-i18n="aboutTechQualityDesc">用户满意度达到95%+，生成内容质量评分持续改善</p>
                             </div>
                             <div class="tech-item">
-                                <h4>稳定性保障</h4>
-                                <p>服务可用性达到99.9%，支持每秒1000+并发请求</p>
+                                <h4 data-i18n="aboutTechStability">稳定性保障</h4>
+                                <p data-i18n="aboutTechStabilityDesc">服务可用性达到99.9%，支持每秒1000+并发请求</p>
                             </div>
                         </div>
                     </div>
@@ -430,16 +430,16 @@
                         <h3 data-i18n="aboutAchievementsIndustry">🌟 行业认可</h3>
                         <div class="recognition-items">
                             <div class="recognition-item">
-                                <h4>技术创新奖</h4>
-                                <p>2024年度AI应用创新大赛优秀奖</p>
+                                <h4 data-i18n="aboutIndustryAward">技术创新奖</h4>
+                                <p data-i18n="aboutIndustryAwardDesc">2024年度AI应用创新大赛优秀奖</p>
                             </div>
                             <div class="recognition-item">
-                                <h4>用户口碑</h4>
-                                <p>社交媒体好评率90%+，用户推荐度高</p>
+                                <h4 data-i18n="aboutIndustryReputation">用户口碑</h4>
+                                <p data-i18n="aboutIndustryReputationDesc">社交媒体好评率90%+，用户推荐度高</p>
                             </div>
                             <div class="recognition-item">
-                                <h4>媒体报道</h4>
-                                <p>多家科技媒体专题报道和评测</p>
+                                <h4 data-i18n="aboutIndustryMedia">媒体报道</h4>
+                                <p data-i18n="aboutIndustryMediaDesc">多家科技媒体专题报道和评测</p>
                             </div>
                         </div>
                     </div>
