refactor(css): radii+shadow -> variables; refactor(voice): add voice_constants + integrate; chore(html): include voice_constants before voice_app (zero-regression)

--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -447,6 +447,8 @@
     <script src="js/api_client.js?v=20250909"></script>
     <!-- 语音页面不依赖首页 UI 逻辑，避免阻塞语音功能 -->
     <script src="js/mobile-interactions.js?v=20250909" defer></script>
+    <!-- 语音模块常量（需在 voice_app.js 之前加载） -->
+    <script src="js/modules/voice_constants.js?v=20250909" defer></script>
     <script src="js/voice_app.js?v=20250909" defer></script>
 
     <!-- 认证模态交互脚本 -->
