chore: unify brand color via CSS vars; fix i18n keys; backend DeepSeek retry

--- a/frontend/image-generator.html
+++ b/frontend/image-generator.html
@@ -180,7 +180,7 @@
                 <h1 class="hero-title" data-i18n="imageGeneratorTitle">AISTONE - AI图片生成器</h1>
             </div>
             <p class="hero-subtitle" data-i18n="imageGeneratorSubtitle">AI驱动·一键生成·释放创意</p>
-            <div class="hero-slogan" data-i18n="imageGeneratorSlogan" style="font-size:1.25em;color:#00CFFF;margin:8px 0 0 0;">免费生成高质量AI图片，支持多种风格和尺寸</div>
+            <div class="hero-slogan" data-i18n="imageGeneratorSlogan" style="font-size:1.25em;color:var(--color-brand-primary, #00CFFF);margin:8px 0 0 0;">免费生成高质量AI图片，支持多种风格和尺寸</div>
             <div class="hero-tags" style="margin-top:12px;">
                 <span class="tag tag-free" data-i18n="tagFree">100% 免费</span>
                 <span class="tag tag-unlimited" data-i18n="tagUnlimited">无限生成</span>
