--- a/frontend/index.html
+++ b/frontend/index.html
@@ -540,7 +540,7 @@
                 <h1 class="hero-title" data-i18n="heroTitle">AISTONE - 免费AI图像生成平台</h1>
             </div>
             <p class="hero-subtitle" data-i18n="heroSubtitle">文本到图像 • AI艺术生成 • 完全免费</p>
-            <div class="hero-slogan" data-i18n="heroSlogan" style="font-size:1.25em;color:#00CFFF;margin:8px 0 0 0;">AI驱动·一键生成·释放你的创意！</div>
+            <div class="hero-slogan" data-i18n="heroSlogan" style="font-size:1.25em;color:var(--color-brand-primary, #00CFFF);margin:8px 0 0 0;">AI驱动·一键生成·释放你的创意！</div>
             <div class="hero-tags" style="margin-top:12px;">
                 <span class="tag tag-free" data-i18n="tagFree">100% 免费</span>
                 <span class="tag tag-unlimited" data-i18n="tagUnlimited">无限生成</span>
@@ -718,15 +718,15 @@
                     </p>
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px;">
                         <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
-                            <h3 style="color: #00CFFF; margin-bottom: 10px;" data-i18n="aistoneImageGenerator">AISTONE AI Image Generator</h3>
+                            <h3 style="color: var(--color-brand-primary, #00CFFF); margin-bottom: 10px;" data-i18n="aistoneImageGenerator">AISTONE AI Image Generator</h3>
                             <p data-i18n="aistoneImageDesc">Experience the power of <strong>AISTONE's</strong> advanced AI models including Kontext, FLUX, and Turbo for stunning visual creation.</p>
                         </div>
                         <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
-                            <h3 style="color: #00CFFF; margin-bottom: 10px;" data-i18n="aistoneVoiceSynthesis">AISTONE Voice Synthesis</h3>
+                            <h3 style="color: var(--color-brand-primary, #00CFFF); margin-bottom: 10px;" data-i18n="aistoneVoiceSynthesis">AISTONE Voice Synthesis</h3>
                             <p data-i18n="aistoneVoiceDesc">Transform text into natural speech with <strong>AISTONE's</strong> state-of-the-art voice synthesis technology.</p>
                         </div>
                         <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
-                            <h3 style="color: #00CFFF; margin-bottom: 10px;" data-i18n="aistoneFreePlatform">AISTONE Free Platform</h3>
+                            <h3 style="color: var(--color-brand-primary, #00CFFF); margin-bottom: 10px;" data-i18n="aistoneFreePlatform">AISTONE Free Platform</h3>
                             <p data-i18n="aistoneFreeDesc">Enjoy <strong>AISTONE's</strong> complete feature set completely free - no registration, no limits, no hidden costs.</p>
                         </div>
                     </div>
@@ -796,7 +796,7 @@
         <!-- FAQ区块 -->
         <section class="faq-section" id="faq" style="background:#232837;padding:48px 0 40px 0;">
             <div class="container">
-                <h2 style="text-align:center;font-size:2.1em;font-weight:bold;margin-bottom:18px;color:#00CFFF;letter-spacing:1px;" data-i18n="faqTitle">常见问题 FAQ</h2>
+                <h2 style="text-align:center;font-size:2.1em;font-weight:bold;margin-bottom:18px;color:var(--color-brand-primary, #00CFFF);letter-spacing:1px;" data-i18n="faqTitle">常见问题 FAQ</h2>
                 <div style="text-align:center;color:#aab4d4;font-size:1.08em;margin-bottom:30px;" data-i18n="faqTip">如有更多疑问，欢迎通过页面底部联系我们</div>
                 <div class="faq-list" style="max-width:900px;margin:0 auto;display:grid;grid-template-columns:1fr 1fr;gap:18px;">
                     <div class="faq-item" style="background:#262b35;border-radius:14px;box-shadow:0 2px 12px #0002;padding:22px 26px;min-height:110px;">
@@ -847,29 +847,29 @@
         <section class="aistone-brand" style="background: #1a1f2e; padding: 60px 0; margin: 40px 0;">
             <div class="container">
                 <div style="text-align: center; color: white; max-width: 1000px; margin: 0 auto;">
-                    <h2 style="font-size: 3em; margin-bottom: 30px; font-weight: bold; background: linear-gradient(45deg, #00CFFF, #667eea); -webkit-background-clip: text; -webkit-text-fill-color: transparent;" data-i18n="aboutAistone">About AISTONE</h2>
+                    <h2 style="font-size: 3em; margin-bottom: 30px; font-weight: bold; background: linear-gradient(45deg, var(--color-brand-primary, #00CFFF), var(--color-brand-secondary, #667eea)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;" data-i18n="aboutAistone">About AISTONE</h2>
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-top: 40px;">
-                        <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid #00CFFF;">
-                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;" data-i18n="whatIsAistone">What is AISTONE?</h3>
+                        <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid var(--color-brand-primary, #00CFFF);">
+                            <h3 style="color: var(--color-brand-primary, #00CFFF); margin-bottom: 15px; font-size: 1.5em;" data-i18n="whatIsAistone">What is AISTONE?</h3>
                             <p style="line-height: 1.8; color: #e0e6f6;" data-i18n="whatIsAistoneDesc">
                                 <strong>AISTONE</strong> is a revolutionary AI-powered platform that combines cutting-edge image generation and voice synthesis technologies. Founded with the vision of democratizing AI content creation, <strong>AISTONE</strong> provides free access to advanced AI models including Kontext, FLUX, and Turbo.
                             </p>
                         </div>
-                        <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid #00CFFF;">
-                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;" data-i18n="aistoneMission">AISTONE's Mission</h3>
+                        <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid var(--color-brand-primary, #00CFFF);">
+                            <h3 style="color: var(--color-brand-primary, #00CFFF); margin-bottom: 15px; font-size: 1.5em;" data-i18n="aistoneMission">AISTONE's Mission</h3>
                             <p style="line-height: 1.8; color: #e0e6f6;" data-i18n="aistoneMissionDesc">
                                 <strong>AISTONE</strong> is committed to making AI content creation accessible to everyone. Whether you're a professional designer, content creator, or just someone with creative ideas, <strong>AISTONE</strong> provides the tools you need to bring your vision to life without any barriers.
                             </p>
                         </div>
-                        <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid #00CFFF;">
-                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;" data-i18n="whyChooseAistone">Why Choose AISTONE?</h3>
+                        <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid var(--color-brand-primary, #00CFFF);">
+                            <h3 style="color: var(--color-brand-primary, #00CFFF); margin-bottom: 15px; font-size: 1.5em;" data-i18n="whyChooseAistone">Why Choose AISTONE?</h3>
                             <p style="line-height: 1.8; color: #e0e6f6;" data-i18n="whyChooseAistoneDesc">
                                 <strong>AISTONE</strong> stands out with its commitment to privacy, quality, and accessibility. Our platform processes all content in real-time without storing user data, ensuring complete privacy while delivering professional-grade results powered by the latest AI technology.
                             </p>
                         </div>
                     </div>
                     <div style="margin-top: 40px; padding: 30px; background: rgba(0,207,255,0.1); border-radius: 15px; border: 1px solid rgba(0,207,255,0.3);">
-                        <h3 style="color: #00CFFF; margin-bottom: 20px; font-size: 1.8em;" data-i18n="aistonePartner">AISTONE - Your AI Content Creation Partner</h3>
+                        <h3 style="color: var(--color-brand-primary, #00CFFF); margin-bottom: 20px; font-size: 1.8em;" data-i18n="aistonePartner">AISTONE - Your AI Content Creation Partner</h3>
                         <p style="font-size: 1.1em; line-height: 1.8; color: #e0e6f6;" data-i18n="aistonePartnerDesc">
                             Join thousands of users who trust <strong>AISTONE</strong> for their AI content creation needs. From stunning visual art to natural voice synthesis, <strong>AISTONE</strong> is your one-stop solution for all AI-powered creative projects. Experience the future of content creation with <strong>AISTONE</strong> today.
                         </p>
