chore(frontend): move #4a90e2/#2980b9 to CSS vars on ai-guide/privacy/terms; partial on prompt-engineering

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -391,7 +391,7 @@
                         <div style="text-align: center; padding: 40px; color: #AAB4D4;">
                             <h3>📋 管理员反馈查看方式</h3>
                             <div style="background: rgba(15, 23, 42, 0.8); border: 1px solid #273548; border-radius: 8px; padding: 20px; margin: 20px 0; text-align: left;">
-                                <h4 style="color: #00CFFF; margin-bottom: 12px;">🔧 通过命令行查看：</h4>
+                                <h4 style="color: var(--color-brand-primary, #00CFFF); margin-bottom: 12px;">🔧 通过命令行查看：</h4>
                                 <div style="font-family: 'Courier New', monospace; background: #0f172a; padding: 12px; border-radius: 6px; margin: 8px 0;">
                                     <div style="color: #10b981;"># 查看所有反馈键</div>
                                     <div style="color: #e5e7eb;">wrangler kv key list --namespace-id="937caf6061f04708929c2c4084b5c075"</div>
