--- a/frontend/index.html
+++ b/frontend/index.html
@@ -604,7 +604,7 @@
                     <label for="type-image" data-i18n="typeImage">生成图片</label>
                     <input type="radio" id="type-audio" name="generation-type" value="audio">
                     <label for="type-audio" data-i18n="typeAudio">生成语音</label>
-                    <a href="voice.html" class="pro-version-link" style="font-size: 0.85em; color: #007bff; text-decoration: none; margin-left: 8px;">
+                    <a href="voice.html" class="pro-version-link" style="font-size: 0.85em; color: var(--color-link-primary, #007bff); text-decoration: none; margin-left: 8px;">
                         🎯 使用专业版
                     </a>
                     <!-- 新增：提示信息 -->
