--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -67,25 +67,25 @@
                 <h2 style="color: #333; margin-bottom: 20px;" data-i18n="contactHelpTitle">📞 获取帮助</h2>
                 <div class="related-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px;">
                     <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
-                        <h3 style="font-size: 16px; margin: 0 0 8px 0; color: #007bff;">
+                        <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                             <a href="faq.html" style="text-decoration: none; color: inherit;" data-i18n="contactHelpFAQTitle">❓ 常见问题解答</a>
                         </h3>
                         <p style="margin: 0; font-size: 14px; color: #666;" data-i18n="contactHelpFAQDesc">先查看FAQ，也许您的问题已有详细解答</p>
                     </div>
                     <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
-                        <h3 style="font-size: 16px; margin: 0 0 8px 0; color: #007bff;">
+                        <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                             <a href="tutorial.html" style="text-decoration: none; color: inherit;" data-i18n="contactHelpTutorialTitle">📖 使用教程</a>
                         </h3>
                         <p style="margin: 0; font-size: 14px; color: #666;" data-i18n="contactHelpTutorialDesc">完整的操作指南，帮您快速上手平台功能</p>
                     </div>
                     <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
-                        <h3 style="font-size: 16px; margin: 0 0 8px 0; color: #007bff;">
+                        <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                             <a href="about.html" style="text-decoration: none; color: inherit;" data-i18n="contactHelpAboutTitle">ℹ️ 关于AISTONE</a>
                         </h3>
                         <p style="margin: 0; font-size: 14px; color: #666;" data-i18n="contactHelpAboutDesc">了解我们的平台理念和技术背景</p>
                     </div>
                     <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
-                        <h3 style="font-size: 16px; margin: 0 0 8px 0; color: #007bff;">
+                        <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                             <a href="/" style="text-decoration: none; color: inherit;" data-i18n="contactHelpHomeTitle">🏠 返回首页</a>
                         </h3>
                         <p style="margin: 0; font-size: 14px; color: #666;" data-i18n="contactHelpHomeDesc">回到主页开始使用AI生成功能</p>
