--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -181,11 +181,11 @@
     }
     
     .privacy-content h2 {
-        color: #4a90e2;
+        color: var(--color-accent-blue, #4a90e2);
         margin-top: 30px;
         margin-bottom: 15px;
         font-size: 1.3em;
-        border-left: 4px solid #4a90e2;
+        border-left: 4px solid var(--color-accent-blue, #4a90e2);
         padding-left: 15px;
     }
     
