chore(frontend): unify secondary blue colors via CSS vars across ai-guide/prompt-engineering/privacy/terms

--- a/frontend/prompt-engineering.html
+++ b/frontend/prompt-engineering.html
@@ -1258,13 +1258,13 @@
     }
 
     .structure-component.primary {
-        border-color: #4a90e2;
+        border-color: var(--color-accent-blue, #4a90e2);
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         color: white;
     }
 
     .structure-component:hover {
-        border-color: #4a90e2;
+        border-color: var(--color-accent-blue, #4a90e2);
         transform: translateY(-3px);
         box-shadow: 0 8px 25px rgba(74, 144, 226, 0.3);
     }
@@ -1293,7 +1293,7 @@
         border-radius: 6px;
         font-style: italic;
         font-size: 0.9em;
-        color: #4a90e2;
+        color: var(--color-accent-blue, #4a90e2);
         font-weight: 500;
     }
 
@@ -1508,7 +1508,7 @@
     }
 
     .practice-item h4 {
-        color: #4a90e2;
+        color: var(--color-accent-blue, #4a90e2);
         margin-bottom: 15px;
         font-size: 1.2em;
     }
@@ -1838,7 +1838,7 @@
     }
 
     .prompt-evolution h5 {
-        color: #4a90e2;
+        color: var(--color-accent-blue, #4a90e2);
         margin-bottom: 20px;
         font-size: 1.2em;
     }
@@ -1874,7 +1874,7 @@
     }
 
     .results {
-        color: #4a90e2;
+        color: var(--color-accent-blue, #4a90e2);
         font-size: 0.9em;
         font-weight: 500;
         margin-top: 8px;
@@ -1895,7 +1895,7 @@
     }
 
     .template-category h4 {
-        background: #4a90e2;
+        background: var(--color-accent-blue, #4a90e2);
         color: white;
         padding: 15px 20px;
         margin: 0;
@@ -1911,7 +1911,7 @@
         padding: 15px;
         border-radius: 6px;
         margin: 12px 0;
-        border-left: 4px solid #4a90e2;
+        border-left: 4px solid var(--color-accent-blue, #4a90e2);
     }
 
     .template h5 {
@@ -2016,7 +2016,7 @@
     }
 
     .module-category h4 {
-        color: #4a90e2;
+        color: var(--color-accent-blue, #4a90e2);
         margin-bottom: 20px;
         font-size: 1.4em;
     }
@@ -2058,7 +2058,7 @@
     }
 
     .module-tag:hover {
-        background: #4a90e2;
+        background: var(--color-accent-blue, #4a90e2);
         color: white;
         transform: scale(1.05);
     }
@@ -2071,7 +2071,7 @@
     }
 
     .modular-assembly h4 {
-        color: #4a90e2;
+        color: var(--color-accent-blue, #4a90e2);
         margin-bottom: 15px;
     }
 
@@ -2147,7 +2147,7 @@
     }
 
     .tip-item h5 {
-        color: #4a90e2;
+        color: var(--color-accent-blue, #4a90e2);
         margin-bottom: 12px;
         font-size: 1.2em;
     }
@@ -2180,7 +2180,7 @@
     /* 广告容器 */
     .ad-container {
         background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-        border: 2px dashed #4a90e2;
+        border: 2px dashed var(--color-accent-blue, #4a90e2);
         border-radius: 10px;
         padding: 30px;
         text-align: center;
@@ -2193,7 +2193,7 @@
         position: absolute;
         top: -12px;
         left: 20px;
-        background: #4a90e2;
+        background: var(--color-accent-blue, #4a90e2);
         color: white;
         padding: 4px 12px;
         border-radius: 15px;
@@ -2777,7 +2777,7 @@
     }
 
     .nav-menu a:hover {
-        color: #4a90e2;
+        color: var(--color-accent-blue, #4a90e2);
     }
 
     .nav-right {
@@ -2797,12 +2797,12 @@
     }
 
     .lang-select:hover {
-        border-color: #4a90e2;
+        border-color: var(--color-accent-blue, #4a90e2);
     }
 
     .lang-select:focus {
         outline: none;
-        border-color: #4a90e2;
+        border-color: var(--color-accent-blue, #4a90e2);
         box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
     }
     </style>
