refactor(frontend): replace neutral #e9ecef/#f8f9fa with CSS variables in about/services/faq

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -564,7 +564,7 @@
         padding: 15px 0;
         font-size: 0.9em;
         color: #666;
-        border-bottom: 1px solid #e9ecef;
+        border-bottom: 1px solid var(--color-border-muted, #e9ecef);
     }
     
     .breadcrumb a {
@@ -730,7 +730,7 @@
 
     /* 技术架构 */
     .technology-section {
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         padding: 60px 40px;
         border-radius: 15px;
         margin-bottom: 80px;
@@ -914,7 +914,7 @@
         border-radius: 10px;
         box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         width: 45%;
-        border: 1px solid #e9ecef;
+        border: 1px solid var(--color-border-muted, #e9ecef);
     }
 
     .timeline-item:nth-child(odd) .timeline-content {
@@ -983,7 +983,7 @@
     }
 
     .expertise-item {
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         padding: 20px;
         border-radius: 8px;
         border-left: 4px solid #17a2b8;
@@ -1112,7 +1112,7 @@
 
     /* 技术合作 */
     .partnership-section {
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         padding: 60px 40px;
         border-radius: 15px;
         margin-bottom: 80px;
@@ -1227,7 +1227,7 @@
 
     .tech-item,
     .recognition-item {
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         padding: 20px;
         border-radius: 8px;
         text-align: left;
@@ -1297,7 +1297,7 @@
         align-items: flex-start;
         gap: 15px;
         padding: 20px;
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         border-radius: 8px;
         border-left: 4px solid #28a745;
     }
@@ -1334,12 +1334,12 @@
         align-items: center;
         gap: 12px;
         padding: 15px;
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         border-radius: 8px;
         text-decoration: none;
         color: #333;
         transition: all 0.3s ease;
-        border: 1px solid #e9ecef;
+        border: 1px solid var(--color-border-muted, #e9ecef);
     }
 
     .social-link:hover {
@@ -1747,11 +1747,11 @@
         }
 
         .value-card:active {
-            background-color: #f8f9fa;
+            background-color: var(--color-surface-muted, #f8f9fa);
         }
 
         .solution-card:active {
-            background-color: #f8f9fa;
+            background-color: var(--color-surface-muted, #f8f9fa);
         }
 
         .social-link:active {
@@ -1809,7 +1809,7 @@
 
     .lang-select {
         padding: 8px 12px;
-        border: 1px solid #e9ecef;
+        border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 6px;
         background: white;
         color: #333;
