--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -426,28 +426,28 @@
                 </section>
 
                 <!-- 相关内容推荐 -->
-                <section class="related-content" style="margin-top: 40px; padding: 20px; background: #f8f9fa; border-radius: 8px;">
+                <section class="related-content" style="margin-top: 40px; padding: 20px; background: var(--color-surface-muted, #f8f9fa); border-radius: 8px;">
                     <h2 style="color: #333; margin-bottom: 20px;">📖 延伸阅读</h2>
                     <div class="related-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px;">
-                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
+                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                                 <a href="tutorial.html" style="text-decoration: none; color: inherit;">📘 完整使用教程</a>
                             </h3>
                             <p style="margin: 0; font-size: 14px; color: #666;">详细的分步指南，教您如何使用AISTONE的所有功能</p>
                         </div>
-                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
+                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                                 <a href="/" style="text-decoration: none; color: inherit;">🏠 返回首页</a>
                             </h3>
                             <p style="margin: 0; font-size: 14px; color: #666;">回到主页开始使用AI图片和语音生成功能</p>
                         </div>
-                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
+                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                                 <a href="contact.html" style="text-decoration: none; color: inherit;">💬 联系我们</a>
                             </h3>
                             <p style="margin: 0; font-size: 14px; color: #666;">没有找到答案？直接联系我们的技术支持团队</p>
                         </div>
-                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
+                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                                 <a href="user.html" style="text-decoration: none; color: inherit;">👤 个人中心</a>
                             </h3>
@@ -559,7 +559,7 @@
         text-align: center;
         margin-bottom: 40px;
         padding: 20px;
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         border-radius: 8px;
     }
 
@@ -571,7 +571,7 @@
     }
 
     .faq-item h3 {
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         margin: 0;
         padding: 15px 20px;
         cursor: pointer;
@@ -634,10 +634,10 @@
 
     /* 相关内容推荐样式 */
     .related-content {
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         padding: 40px 0;
         margin-top: 30px;
-        border-top: 1px solid #e9ecef;
+        border-top: 1px solid var(--color-border-muted, #e9ecef);
     }
 
     .related-content h3 {
