refactor(frontend): migrate neutrals/voice/admin colors to CSS variables; docs update (zero visual regression)

--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -565,7 +565,7 @@
 
     .faq-item {
         margin-bottom: 20px;
-        border: 1px solid #e0e0e0;
+        border: 1px solid var(--color-border-neutral, #e0e0e0);
         border-radius: 8px;
         overflow: hidden;
     }
@@ -578,7 +578,7 @@
         font-size: 1.1em;
         font-weight: 600;
         color: #333;
-        border-bottom: 1px solid #e0e0e0;
+        border-bottom: 1px solid var(--color-border-neutral, #e0e0e0);
         transition: background-color 0.3s;
     }
 
@@ -609,7 +609,7 @@
 
     .ad-container {
         background: #f9f9f9;
-        border: 1px dashed #ddd;
+        border: 1px dashed var(--color-border-soft, #ddd);
         border-radius: 5px;
         padding: 20px;
     }
