--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -208,7 +208,7 @@
     
     .ad-container {
         background: #f9f9f9;
-        border: 1px dashed #ddd;
+        border: 1px dashed var(--color-border-soft, #ddd);
         border-radius: 5px;
         padding: 20px;
     }
