--- a/frontend/tutorial.html
+++ b/frontend/tutorial.html
@@ -312,28 +312,28 @@
                 </section>
 
                 <!-- 相关内容推荐 -->
-                <section class="related-content" style="margin-top: 40px; padding: 20px; background: #f8f9fa; border-radius: 8px;">
+                <section class="related-content" style="margin-top: 40px; padding: 20px; background: var(--color-surface-muted, #f8f9fa); border-radius: 8px;">
                     <h2 style="color: #333; margin-bottom: 20px;">📚 相关内容推荐</h2>
                     <div class="related-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px;">
-                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
+                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                                 <a href="faq.html" style="text-decoration: none; color: inherit;">❓ 常见问题解答</a>
                             </h3>
                             <p style="margin: 0; font-size: 14px; color: #666;">遇到问题？查看用户最常问的问题和详细解答</p>
                         </div>
-                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
+                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                                 <a href="/" style="text-decoration: none; color: inherit;">🎨 立即生成图片</a>
                             </h3>
                             <p style="margin: 0; font-size: 14px; color: #666;">学会了使用方法？现在就开始创作您的第一张AI图片</p>
                         </div>
-                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
+                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                                 <a href="voice.html" style="text-decoration: none; color: inherit;">🎵 体验语音合成</a>
                             </h3>
                             <p style="margin: 0; font-size: 14px; color: #666;">尝试我们的AI语音合成功能，将文字转换为自然语音</p>
                         </div>
-                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid #e9ecef;">
+                        <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                             <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                                 <a href="about.html" style="text-decoration: none; color: inherit;">ℹ️ 了解AISTONE</a>
                             </h3>
@@ -462,14 +462,14 @@
         text-align: center;
         margin-bottom: 40px;
         padding: 20px;
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         border-radius: 8px;
     }
 
     .tutorial-step {
         margin-bottom: 30px;
         padding: 20px;
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         border-radius: 8px;
         border-left: 4px solid var(--color-accent-blue, #4a90e2);
     }
@@ -500,7 +500,7 @@
 
     .ad-container {
         background: #f9f9f9;
-        border: 1px dashed #ddd;
+        border: 1px dashed var(--color-border-soft, #ddd);
         border-radius: 5px;
         padding: 20px;
     }
@@ -525,10 +525,10 @@
 
     /* 相关内容推荐样式 */
     .related-content {
-        background: #f8f9fa;
+        background: var(--color-surface-muted, #f8f9fa);
         padding: 40px 0;
         margin-top: 30px;
-        border-top: 1px solid #e9ecef;
+        border-top: 1px solid var(--color-border-muted, #e9ecef);
     }
 
     .related-content h3 {
