feat: 完成全站CSS变量化重构
- 新增50+个语义化CSS变量到variables.css
- 统一替换全站硬编码颜色为CSS变量
- 覆盖文件：style.css, terms.html, privacy.html, tutorial.html, faq.html, ai-guide.html, prompt-engineering.html, about.html, services.html, contact.html
- 所有变量带回退值，确保零视觉回归
- 提升代码可维护性和一致性

完成Phase 4前端可维护性优化，项目优化计划进度95%

--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -501,7 +501,7 @@
         margin-bottom: 20px;
         padding: 10px 0;
         font-size: 0.9em;
-        color: #666;
+        color: var(--color-text-on-light-muted, #666);
     }
     
     .breadcrumb a {
@@ -521,7 +521,7 @@
     }
     
     .breadcrumb .current {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         font-weight: 500;
     }
 
@@ -533,14 +533,14 @@
     }
 
     .faq-content {
-        background: white;
+        background: var(--color-surface-white, #fff);
         padding: 30px;
         border-radius: 10px;
         box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
     .faq-content h1 {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         margin-bottom: 30px;
         font-size: 2.5em;
         text-align: center;
@@ -577,24 +577,24 @@
         cursor: pointer;
         font-size: 1.1em;
         font-weight: 600;
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         border-bottom: 1px solid var(--color-border-neutral, #e0e0e0);
         transition: background-color 0.3s;
     }
 
     .faq-item h3:hover {
-        background: #e8f4fd;
+        background: var(--color-surface-info-soft, #e8f4fd);
     }
 
     .faq-answer {
         padding: 20px;
-        background: white;
+        background: var(--color-surface-white, #fff);
         display: block;
     }
 
     .faq-answer p {
         margin-bottom: 10px;
-        color: #666;
+        color: var(--color-text-on-light-muted, #666);
     }
 
     .faq-answer ul {
@@ -604,11 +604,11 @@
 
     .faq-answer li {
         margin-bottom: 5px;
-        color: #666;
+        color: var(--color-text-on-light-muted, #666);
     }
 
     .ad-container {
-        background: #f9f9f9;
+        background: var(--color-surface-verylight, #f9f9f9);
         border: 1px dashed var(--color-border-soft, #ddd);
         border-radius: 5px;
         padding: 20px;
@@ -642,7 +642,7 @@
 
     .related-content h3 {
         text-align: center;
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         margin-bottom: 30px;
         font-size: 1.5em;
     }
