--- a/frontend/ai-guide.html
+++ b/frontend/ai-guide.html
@@ -758,7 +758,7 @@
         margin-bottom: 30px;
         padding: 15px 0;
         font-size: 0.9em;
-        color: #666;
+        color: var(--color-text-on-light-muted, #666);
         border-bottom: 1px solid var(--color-border-muted, #e9ecef);
     }
     
@@ -779,13 +779,13 @@
     }
     
     .breadcrumb .current {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         font-weight: 500;
     }
 
     /* 指南内容区域 */
     .guide-content {
-        background: white;
+        background: var(--color-surface-white, #fff);
         padding: 40px;
         border-radius: 12px;
         box-shadow: 0 4px 20px rgba(0,0,0,0.08);
@@ -813,7 +813,7 @@
 
     .guide-subtitle {
         font-size: 1.2em;
-        color: #666;
+        color: var(--color-text-on-light-muted, #666);
         margin-bottom: 20px;
         font-weight: 300;
     }
@@ -823,7 +823,7 @@
         justify-content: center;
         gap: 30px;
         font-size: 0.9em;
-        color: #888;
+        color: var(--color-text-on-light-subtle, #888);
     }
 
     .guide-meta span {
@@ -842,7 +842,7 @@
     }
 
     .table-of-contents h2 {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         margin-bottom: 15px;
         font-size: 1.3em;
     }
@@ -875,7 +875,7 @@
     }
 
     .guide-section h2 {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         font-size: 2em;
         margin-bottom: 25px;
         padding: 20px 0;
@@ -902,7 +902,7 @@
     }
 
     .guide-section h4 {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         font-size: 1.2em;
         margin-top: 25px;
         margin-bottom: 12px;
@@ -910,7 +910,7 @@
     }
 
     .guide-section p {
-        color: #555;
+        color: var(--color-text-on-light, #555);
         margin-bottom: 15px;
         text-align: justify;
     }
@@ -921,7 +921,7 @@
     }
 
     .guide-section li {
-        color: #555;
+        color: var(--color-text-on-light, #555);
         margin-bottom: 8px;
         line-height: 1.6;
     }
@@ -993,7 +993,7 @@
         width: 100%;
         border-collapse: collapse;
         margin: 20px 0;
-        background: white;
+        background: var(--color-surface-white, #fff);
         border-radius: 8px;
         overflow: hidden;
         box-shadow: 0 2px 10px rgba(0,0,0,0.1);
