--- a/frontend/prompt-engineering.html
+++ b/frontend/prompt-engineering.html
@@ -1010,7 +1010,7 @@
         margin-bottom: 30px;
         padding: 15px 0;
         font-size: 0.9em;
-        color: #666;
+        color: var(--color-text-on-light-muted, #666);
         border-bottom: 1px solid var(--color-border-muted, #e9ecef);
     }
     
@@ -1031,13 +1031,13 @@
     }
     
     .breadcrumb .current {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         font-weight: 500;
     }
 
     /* 指南主体 */
     .prompt-guide {
-        background: white;
+        background: var(--color-surface-white, #fff);
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0 10px 30px rgba(0,0,0,0.08);
@@ -1101,7 +1101,7 @@
 
     .course-overview h2 {
         text-align: center;
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         font-size: 2.2em;
         margin-bottom: 30px;
     }
@@ -1134,7 +1134,7 @@
     }
 
     .overview-item p {
-        color: #666;
+        color: var(--color-text-on-light-muted, #666);
         font-size: 1em;
         margin: 0;
     }
@@ -1150,7 +1150,7 @@
     }
 
     .chapter h2 {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         font-size: 2.5em;
         margin-bottom: 30px;
         padding-bottom: 15px;
@@ -1167,7 +1167,7 @@
     }
 
     .chapter h4 {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         font-size: 1.4em;
         margin-top: 30px;
         margin-bottom: 15px;
@@ -1175,7 +1175,7 @@
     }
 
     .chapter p {
-        color: #555;
+        color: var(--color-text-on-light, #555);
         margin-bottom: 18px;
         text-align: justify;
         font-size: 1.05em;
@@ -1823,13 +1823,13 @@
     }
 
     .case-brief h5 {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         margin-bottom: 10px;
         font-size: 1.1em;
     }
 
     .case-brief p {
-        color: #666;
+        color: var(--color-text-on-light-muted, #666);
         margin-bottom: 20px;
     }
 
