--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -238,14 +238,14 @@
     }
 
     .terms-content {
-        background: white;
+        background: var(--color-surface-white, #fff);
         padding: 30px;
         border-radius: 10px;
         box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
     .terms-content h1 {
-        color: #333;
+        color: var(--color-text-on-light-strong, #333);
         margin-bottom: 20px;
         font-size: 2.5em;
         text-align: center;
@@ -261,7 +261,7 @@
     }
 
     .terms-content p, .terms-content li {
-        color: #666;
+        color: var(--color-text-on-light-muted, #666);
         margin-bottom: 10px;
     }
 
@@ -273,12 +273,12 @@
     .last-updated {
         text-align: center;
         font-style: italic;
-        color: #888;
+        color: var(--color-text-on-light-subtle, #888);
         margin-bottom: 30px;
     }
 
     .ad-container {
-        background: #f9f9f9;
+        background: var(--color-surface-verylight, #f9f9f9);
         border: 1px dashed var(--color-border-soft, #ddd);
         border-radius: 5px;
         padding: 20px;
